[package]
name = "rng_tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify-next = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"
wee_alloc = { version = "0.4.5", optional = true }
